--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "axios": "^0.21.4",
     "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
+    "fs": "0.0.1-security",
     "node-fetch": "^2.6.1",
+    "puppeteer": "^10.4.0",
     "snekfetch": "^4.0.4"
   }
 }
